# Asteroids-server

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
frontend/: asteroid.js  bullet.js  index.html  main.js  network.js  player.js  style.css
frontend/src/: constants.js
frontend/src/entities/: asteroid.js  bullet.js  player.js
frontend/src/networking/: network.js
frontend/src/ui/: hud.js  renderer.js  screens.js
src/: asteroid.rs  asteroid_collection.rs  bullet.rs  bullet_collection.rs  client.rs  collision_object.rs  game.rs  lib.rs  main.rs  main_old.rs  player.rs  player_collection.rs  server.rs  shot.rs  types.rs  warp_object.rs  websocket_handler.rs
src/collections/: asteroid_collection.rs  bullet_collection.rs  mod.rs  player_collection.rs
src/entities/: asteroid.rs  bullet.rs  hitbox.rs  mod.rs  player.rs
src/entities/traits/: collision_object.rs  mod.rs  warp_object.rs
src/networking/: mod.rs  router.rs  websocket_handler.rs
src/systems/: collision.rs
tests/: collections.rs  reproducibility.rs
tests/collections/: bullet_collection.rs
