[package]
name = "asteroids-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.21"

tungstenite = "0.21"  # usado internamente, pode ser omitido mas é bom ter para clareza

futures-util = "0.3.31"
uuid = { version = "1", features = ["v4"] }
rand = "0.9.2"
axum = { version = "0.8.8", features = ["ws"] }
