[package]
name = "asteroids-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.21"

futures-util = "0.3.31"
uuid = { version = "1", features = ["v4"] }
rand = "0.9.2"

axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["cors"] }

sysinfo = "0.38.0"